# paf_claud_skill

./: .gitignore  README.md  SKILL.md  UPGRADE-2.0.md  spec.example.yaml
agents/: paf-deliverables.md  paf-discovery.md  paf-validator.md
assets/: brand.json
core/: INSTALL.md  README.md  paf-import.md  validation-gate.md
deliverables/: DELIVERABLES.md  PAF_Factory_Deliverables.pptx  build_deck.js  build_diagram.js
hooks/: settings.fragment.json
references/: architecture.md  branding.md  connection.md  deliverables.md  graphics-standard.md  interface-catalog.md  observability.md  oracle-gotchas.md  orchestration.md  paf-platform.md  pricing-and-bom.md  qa-and-bugfixing.md  validation-gate.md
scripts/: build_state.py  converged.py  discovery.sql  lint_paf.py  paf_packager.py  (+4 more)
templates/: .gitignore  INSTALL.md  README.md  conn.example.json  file_header.txt  pyproject.toml  requirements.txt  setup.sh
templates/deliverables/: build_diagrams.js  build_docx.py  build_oci_bom_xlsx.py  build_sales_deck.js  pricing.py
templates/docs/: ARCHITECTURE.md  EBS_INTERFACE_CONTRACT.md  OPERATIONS_RUNBOOK.md  PAF_INTEGRATION.md  SECURITY.md
templates/qa_checks/: balancing_check.py  parity_check.py
templates/src/ebs_paf_agent/: __init__.py  __main__.py  cli.py  config.py  db.py  extractor.py  interface_loader.py  interface_writer.py  invoice_agent.py  mcp_ebs_server.py  policy_engine.py  qa_checks.py  repository.py
templates/tests/: conftest.py  test_agent_mock.py  test_extractor.py  test_interface_writer.py  test_live_ebs.py  test_policy_engine.py  test_qa_checks.py
(+17 files in other folders)
