# Syntax Corporation © 2026 — EBS AP PAF
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ebs-ap-paf"
version = "1.0.0"
description = "EBS AP Invoice Automation Agent (Private Agent Factory pattern) — live Oracle EBS Vision build"
requires-python = ">=3.10"
authors = [{ name = "Syntax Corporation" }]
dependencies = ["python-oracledb>=2.0.0"]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
mcp = ["mcp>=1.0.0", "pydantic>=2.0"]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
ebs-ap-paf = "ebs_ap_paf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that require a live connection to the EBS Vision database (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
